fix: layout + expand/collapse

--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -1187,8 +1187,7 @@ button.mdc-card__action--icon:hover {
 
 .mdc-layout-grid {
   position: relative;
-  top: 200px;
-  height: 100vh;
+  top: 150px;
 }
 
 @media only screen and (min-width: 992px) {
